style.css
/* ... */
.page-links {
	clear: both;
	margin: 0 0 1.5em;
}


/* =Media
----------------------------------------------- */
img[class*="wp-image-"] {
	border-radius: 4px;
}
.page-content img.wp-smiley,
.entry-content img.wp-smiley,
.comment-content img.wp-smiley {
	border: none;
	margin-bottom: 0;
	margin-top: 0;
	padding: 0;
}
.wp-caption {
	border: 1px solid #ddd;
	margin-bottom: 1.5em;
	max-width: 100%;
	border-radius: 4px;
	padding: 4px;
	line-height: 1;
}
.wp-caption img[class*="wp-image-"] {
	display: block;
	margin: 0 auto;
	max-width: 100%;
	border-radius: 4px;
}
.wp-caption-text {
	text-align: center;
}
.wp-caption .wp-caption-text {
	margin: 0.8075em 0;
}
.site-main .gallery {
	margin-bottom: 1.5em;
}
.gallery-caption {
}
.site-main .gallery a img {
	border: none;
	height: auto;
	max-width: 90%;
}
.site-main .gallery dd {
	margin: 0;
}
.site-main .gallery-columns-4 .gallery-item {
}
.site-main .gallery-columns-4 .gallery-item img {
}

/* Make sure embeds and iframes fit their containers */
embed,
iframe,
object {
	max-width: 100%;
}


/* =Navigation
----------------------------------------------- */

.site-main [class*="navigation"] {
	margin: 0 0 1.5em;
	overflow: hidden;
}
[class*="navigation"] .nav-previous {
	float: left;
	width: 50%;
}
[class*="navigation"] .nav-next {
	float: right;
	text-align: right;
	width: 50%;
}

.pagination-p {
	float: left;
	margin: 20px 10px 20px 0;
	line-height: 32px;
}


/* =Comments
----------------------------------------------- */

.comment-content a {
	word-wrap: break-word;
}
.bypostauthor {
}
body .comment-reply-title {
	clear: none;
}
.comment-list,
.comment-list ol,
.comment-list li {
	list-style: none;
	margin: 0 0 10px 0;
	padding: 0;
}
@media screen and (min-width: 768px) {
	.comment-list ol {
		margin-left: 50px;
	}
}
.comment-metadata,
.comment-awaiting-moderation {
	line-height: 32px;
	margin: 0;
}

/* =Widgets
----------------------------------------------- */
.widget {
	margin: 0 0 1.5em;
}

/* Make sure select elements fit in widgets */
.widget select {
	max-width: 100%;
}

/* Search widget */
.widget_search .search-submit {
	display: none;
}

/* Widget iframe */
.widget iframe {
	width: 100% !important;
	height: auto;
	overflow: hidden;
}

/* Affix Widget */
.ipt_kb_affix .list-group-item.active-cat {
	background-color: #f1f1f1;
}
.ipt_kb_affix .ipt-kb-toc {
	font-size: 12px;
}
.ipt-kb-toc h4 {
	clear: none;
}
.ipt_kb_affix .ipt-kb-toc h5 {
	margin: 0;
}
#ipt-kb-toc-scrollspy {
	margin-bottom: 10px;
}
#ipt-kb-toc-scrollspy ul {
	margin: 0;
	padding: 0;
	list-style: none;
}
#ipt-kb-toc-scrollspy ul li {
	line-height: 12px;
	margin: 0;
	padding: 0;
}
#ipt-kb-toc-scrollspy ul li.active {
	font-weight: bold;
}
#ipt-kb-toc-scrollspy ul li a {
	font-size: 12px;
	padding: 7px 10px;
}
#ipt-kb-toc-scrollspy ul li.active a {
	background-color: #f1f1f1;
}
#ipt-kb-affix-active-post .list-group-item {
	padding: 5px 15px;
	font-size: 12px;
}
.ipt-kb-toc .accordion-toggle i.glyphicon {
	font-size: 16px;
	margin-left: 4px;
}

/* Social Widget */
.ipt-kb-social-widget .widget-title span {
	color: #2A6496;
}
.ipt-kb-social-widget .ipt-kb-social-ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	text-align: center;
}
.ipt-kb-social-widget .ipt-kb-social-ul li {
	display: inline-block;
	width: 56px;
	height: 56px;
	margin: 0 2px;
}
.ipt-kb-social-widget .ipt-kb-social-ul li a {
	text-align: center;
	line-height: 56px;
	height: 56px;
	width: 56px;
	display: block;
	border-radius: 100%;
	background-color: #f1f1f1;
	border: 1px solid #ddd;
	color: #ddd;
	text-decoration: none;
	-webkit-transition: all 400ms;
	-moz-transition: all 400ms;
	-ms-transition: all 400ms;
	-o-transition: all 400ms;
	transition: all 400ms;
}
.ipt-kb-social-widget .ipt-kb-social-ul li a i {
	font-size: 32px;
	line-height: 50px;
}
.ipt-kb-social-widget .ipt-kb-social-ul li a:hover {
	color: #fff;
	text-shadow: 0 0 2px #888;
}
.ipt-kb-social-widget .ipt-kb-social-ul li.facebook a:hover {
	background-color: #3B5998;
	border-color: #3B5998;
}
.ipt-kb-social-widget .ipt-kb-social-ul li.twitter a:hover {
	background-color: #00A0D1;
	border-color: #00A0D1;
}
.ipt-kb-social-widget .ipt-kb-social-ul li.gplus a:hover {
	background-color: #C63D2D;
	border-color: #C63D2D;
}
.ipt-kb-social-widget .ipt-kb-social-ul li.youtube a:hover {
	background-color: #C4302B;
	border-color: #C4302B;
}
.ipt-kb-social-widget .ipt-kb-social-ul li.vimeo a:hover {
	background-color: #44BBFF;
	border-color: #44BBFF;
}
.ipt-kb-social-widget .ipt-kb-social-ul li.pinterest a:hover {
	background-color: #910101;
	border-color: #910101;
}

/* =Footer
---------------------------------------------- */
#colophon {
	padding: 10px 0 30px;
	font-size: 1em;
	min-height: 120px;
	padding-bottom: 20px;
	position: relative;
	background-color: #eee;
}

#colophon .site-info {
	text-align: center;
	font-size: 12px;
	bottom: 0;
	position: absolute;
	width: 100%;
}

/* =Knowledgebase Homepage
----------------------------------------------- */
#main .knowledgebase-title {
	font-size: 17px;
	margin-top: 10px;
}
#main .glyphicon {
	font-size: 16px;
}
#main [class*="glyphicon-"] {
	font-size: 15px;
}
#main .kb-post-list .badge {
	margin-top: 3px;
}
#main .kb-post-list h3 {
	clear: none;
	margin: 0;
	line-height: 24px;
	font-size: 14px;
	font-family: 'Roboto', sans-serif;
}

/* =Knowledgebase Parent Category
----------------------------------------------- */
#main .kb-parent-category-header {
	margin-bottom: 20px;
}
#main .kb-parent-category-header .kb-pcat-icon {
	margin-top: 0;
}
#main .kb-subcat .knowledgebase-title {
	font-size: 17px;
	margin-top: 0;
}
#main .kb-subcat-icon {
	padding: 0;
}
#main .kb-subcat-icon .thumbnail {
	height: 100px;
	line-height: 100px;
}
#main .kb-subcat-icon .thumbnail .glyphicon {
	font-size: 64px;
	line-height: 72px;
}
#main .kb-subcat-icon .thumbnail i[class*=ipt-] {
	line-height: 82px;
}
#main .kb-scat-title {
	margin-top: 0;
}
/* ... */

